tests/ui/lazy-type-alias/unconstrained-params-in-impl.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-params-in-impl.rs:4:6
   |
LL | impl<T> NotInjective<T> {}
   |      ^ unconstrained type parameter

error: hi
  --> $DIR/unconstrained-params-in-impl.rs:10:1
   |
LL | trait Discard { type Out; }
   | ------------- built-in `dyn Discard<Out = _>` implementation for this trait
LL | impl<T: ?Sized> Discard for T { type Out = (); }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
